--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "private": true,
-  "displayName": "Plugin Name",
-  "name": "homebridge-plugin-name",
-  "version": "1.0.0",
+  "displayName": "Pioneer LX85",
+  "name": "@handmousemaster/homebridge-pioneer-receiver",
+  "version": "0.0.1",
   "description": "A short description about what your plugin does.",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "git+https://github.com/gregoiremercier/homebridge.pioneer.receiver.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/gregoiremercier/homebridge.pioneer.receiver/issues"
   },
   "engines": {
     "node": ">=14.18.1",
@@ -26,7 +25,6 @@
   "keywords": [
     "homebridge-plugin"
   ],
-  "dependencies": {},
   "devDependencies": {
     "@types/node": "^16.10.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -37,5 +35,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
-  }
+  },
+  "types": "./dist/index.d.ts",
+  "homepage": "https://github.com/gregoiremercier/homebridge.pioneer.receiver#readme",
+  "author": "handmousemaster"
 }
