--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "displayName": "Pioneer LX85",
+  "displayName": "Pioneer SC-LX85",
   "name": "@handmousemaster/homebridge-pioneer-receiver",
   "version": "0.0.1",
-  "description": "A short description about what your plugin does.",
-  "license": "Apache-2.0",
+  "description": "Pioneer SC-LX85 plugin for homebridge. This plugin is originally forked from https://github.com/AmitayAbudy/homebridge-pioneer-SC-LX88",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gregoiremercier/homebridge.pioneer.receiver.git"
@@ -25,17 +25,15 @@
   "keywords": [
     "homebridge-plugin"
   ],
-  "devDependencies": {
-    "@types/node": "^16.10.9",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "homebridge": "^1.3.5",
-    "nodemon": "^2.0.13",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
-  },
+    "dependencies": {
+      "net": "",
+      "fs": "",
+      "deasync": "",
+      "mkdirp": "",
+      "persist-path": "",
+      "rwlock": "",
+      "request": ""
+    },
   "types": "./dist/index.d.ts",
   "homepage": "https://github.com/gregoiremercier/homebridge.pioneer.receiver#readme",
   "author": "handmousemaster"
